# tiago_kinematic_control

./: CMakeLists.txt  README.md  package.xml
src/tiago_kinematic_control/: kinematic_control.py
